tests/errmsgs/tenable_dot_operator.nim
discard """
  errormsg: '''
    the overloaded . operator has to be enabled with {.experimental: "dotOperators".}
  '''
  line: 8
"""

proc `.`(a: int) = discard
